--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5720,7 +5720,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Delegaciones de la empresa", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 345, 8
 }
 
-EMPRESA_12 DIALOG DISCARDABLE 31, 12, 439, 313
+EMPRESA_TPV DIALOG DISCARDABLE 31, 12, 439, 313
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
