articulos por peso

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1497,7 +1497,7 @@ ART_TACTIL DIALOG DISCARDABLE 36, 16, 496, 306
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 29, 448, 120
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 29, 448, 130
   CONTROL "Incluir en táctil", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 36, 59, 10
   CONTROL "", 225, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 139, 47, 40, 12
   CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 139, 60, 348, 12
@@ -1507,6 +1507,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 471, "Edit", WS_BORDER|WS_TABSTOP, 180, 99, 307, 12
   CONTROL "", 450, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 140, 112, 85, 84
   CONTROL "", 460, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 140, 127, 85, 84
+  CONTROL "Artículo por peso", 480, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 143, 89, 10
   CONTROL "Texto táctil", -1, "Static", WS_GROUP, 49, 62, 47, 8
   CONTROL "Imagen táctil", -1, "Static", WS_GROUP, 49, 89, 45, 8
   CONTROL "Posición", -1, "Static", WS_GROUP, 49, 50, 32, 8
