--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -258,10 +258,10 @@ FONT 12, "Segoe UI"
   CONTROL "", -1, "Static", SS_BITMAP|SS_CENTERIMAGE, 306, 54, 34, 30
 }
 
-CALCULADORA DIALOG DISCARDABLE 118, 40, 66, 84
+CALCULADORA DIALOG DISCARDABLE 118, 40, 66, 85
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU
 CAPTION "Calculadora"
-FONT 24, "Verdana"
+FONT 24, "Segoe UI"
 {
   CONTROL "", 100, "Static", SS_RIGHT|WS_GROUP, 1, 2, 64, 9
   CONTROL "0", 117, "Button", WS_TABSTOP, 1, 59, 16, 12
@@ -283,8 +283,8 @@ FONT 24, "Verdana"
   CONTROL "+/-", 103, "Button", WS_TABSTOP, 33, 11, 16, 12
   CONTROL "<", 102, "Button", WS_TABSTOP, 17, 11, 16, 12
   CONTROL "C", 101, "Button", WS_TABSTOP, 1, 11, 16, 12
-  CONTROL "&Ok", IDOK, "Button", WS_TABSTOP, 1, 71, 32, 12
-  CONTROL "&Cancel", IDCANCEL, "Button", WS_TABSTOP, 33, 71, 32, 12
+  CONTROL "", IDOK, "Button", WS_TABSTOP, 33, 72, 16, 12
+  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 49, 72, 16, 12
 }
 
 HELPENTRYTACTIL DIALOG DISCARDABLE 120, -20, 342, 276
@@ -2226,7 +2226,7 @@ FONT 12, "Segoe UI"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-CALCULADORALITTLE DIALOG DISCARDABLE 118, 40, 50, 66
+CALCULADORALITTLE DIALOG DISCARDABLE 118, 40, 50, 67
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU
 CAPTION "Calculadora"
 FONT 16, "Segoe UI"
@@ -2251,8 +2251,8 @@ FONT 16, "Segoe UI"
   CONTROL "+/-", 103, "Button", WS_TABSTOP, 25, 11, 12, 9
   CONTROL "<", 102, "Button", WS_TABSTOP, 13, 11, 12, 9
   CONTROL "C", 101, "Button", WS_TABSTOP, 1, 11, 12, 9
-  CONTROL "&Ok", IDOK, "Button", WS_TABSTOP, 1, 56, 24, 9
-  CONTROL "&Cancel", IDCANCEL, "Button", WS_TABSTOP, 25, 56, 24, 9
+  CONTROL "", IDOK, "Button", WS_TABSTOP, 25, 57, 12, 9
+  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 37, 57, 12, 9
 }
 
 TOOLTIPSALA DIALOG DISCARDABLE 119, 36, 267, 252
