--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5751,8 +5751,7 @@ FONT 8, "MS Sans Serif"
 }
 
 EMPRESA_2 DIALOG DISCARDABLE 31, 12, 441, 347
-STYLE WS_CHILD|DS_3DLOOK|WS_CAPTION
-CAPTION "s"
+STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Permitir solo artículos codificados", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 39, 118, 10
